<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Hasil Analisis</string>
    <string name="main_appbar">Cancer Detection App</string>
    <string name="result_appbar">Analysis Result</string>
    <string name="status">Status</string>
    <string name="percentage">Percentage</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="save_to_history">Save to History</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_article">Article</string>
    <string name="datetime">DateTime</string>
    <string name="no_histories_data">Belum ada data histories</string>
</resources>