<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cream"
    tools:context=".view.Result.ResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/result_appbar"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_place_holder" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/status"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:text="@string/percentage"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="18sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/result_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:gravity="center"
                        android:textSize="16sp"
                        tools:text="@string/result"/>

                    <TextView
                        android:id="@+id/result_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:gravity="center"
                        android:textSize="16sp"
                        tools:text="@string/percentage"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/saveToHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/save_to_history" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>