<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_background"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="180dp"
        android:layout_height="165dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="180dp"
            android:layout_height="165dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/label_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        android:text="@string/status" />
    <TextView
        android:id="@+id/tv_status_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:paddingHorizontal="8dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/label_status"
        tools:text="Non-Cancer" />

    <TextView
        android:id="@+id/label_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_result"
        android:text="@string/percentage" />
    <TextView
        android:id="@+id/tv_status_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:paddingHorizontal="8dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/label_percentage"
        tools:text="58%" />

    <TextView
        android:id="@+id/label_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_percentage"
        android:text="@string/datetime" />
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:paddingHorizontal="8dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/label_time"
        tools:text="25 Apr 2024, 14:00 WIB" />

</androidx.constraintlayout.widget.ConstraintLayout>